--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,23 @@ html {
 #mainNav .navbar-nav > li.nav-item:focus.active:hover {
   background-color: transparent;
 }
+
+/* Projects  */
+.projects-section {
+  margin-top: 5rem;
+}
+.projects-section h1{
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.project-card-caption-content {
+  line-height: 2rem;
+}
+.project-card-caption-content a:hover {
+  color: #f16926dd;
+  text-decoration: none;
+}
+.project-card-caption-content i.fab {
+  font-size: 2rem;
+}
