--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ html {
 }
 
 
+
 .wrapper {
   min-height: 100%;
   padding-bottom: 100px;
@@ -24,12 +25,12 @@ html {
 #mainNav .navbar-brand {
   font-weight: 700;
   text-transform: uppercase;
-  color: #f05f40;
+  color: orangered;
   font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
 }
 #mainNav .navbar-brand:focus,
 #mainNav .navbar-brand:hover {
-  color: #f05f40;
+  color: #e60404;
 }
 #mainNav .navbar-nav > li.nav-item,
 #mainNav .navbar-nav > li.nav-item:focus {
@@ -37,7 +38,7 @@ html {
   font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
-  color: #212529;
+  color: #0a79e8;
 }
 #mainNav .navbar-nav > li.nav-item:hover,
 #mainNav .navbar-nav > li.nav-item:focus:hover {
@@ -62,13 +63,65 @@ html {
   margin-bottom: 2rem;
 }
 
+.project-card{
+  position: relative;
+  display: block;
+  max-width: 650px;
+  margin: 0 auto;
+ 
+
+}
+
+
+.project-card-caption{
+  background-color: #f05f40;
+  position:absolute;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  opacity: 0;
+  background: rgba(246, 245, 243, 0.9);
+  /* -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  transition: all 0.2s; */
+
+  
+}
+
+.project-card-caption-content{
+  position: absolute;
+  top: 30%;
+  width: 100%;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: uppercase;
+ 
+
+}
+
+.project-card:hover .project-card-caption{
+  opacity: 1;
+}
 .project-card-caption-content {
   line-height: 2rem;
+
+
 }
 .project-card-caption-content a:hover {
+
   color: #f16926dd;
   text-decoration: none;
 }
 .project-card-caption-content i.fab {
+
   font-size: 2rem;
+  color: rgb(12, 96, 4);
+}
+.project-card-caption-content i.fas {
+  padding-top: 0.8rem;
+  font-size: 1.5rem;
+  color: rgb(24, 195, 8);
 }
