--- a/src/components/pages/About/style.css
+++ b/src/components/pages/About/style.css
@@ -1,19 +1,40 @@
-
-div.heroSection {
+#heroSection {
   padding-top: 10rem;
-  padding-bottom: calc(10rem - 56px);
-  background-image: url("../../../assets/images/hero-bg.jpg"); 
-  background-position: center center;
-  -webkit-background-size: cover;
+  /* padding-bottom: calc(10rem - 56px); */
+  background-image: linear-gradient(
+      to bottom,
+      rgba(1, 1, 9, 0.325),
+      rgba(30, 34, 34, 0.3)
+    ),
+    url("../../../assets/images/bg-mountains.jpg");
+  background-position: center;
+  /* -webkit-background-size: cover;
   -moz-background-size: cover;
-  -o-background-size: cover;
+  -o-background-size: cover; */
   background-size: cover;
+  object-fit: cover;
+  min-height: 100vh;
+  min-width: 100vh;
+  color: #fff;
 }
 
-div.heroSection h1 {
+#heroSection h1 {
   font-size: 2rem;
   margin-bottom: 30px;
 }
-div.heroSection p {
+#heroSection p {
   font-weight: 300;
+  line-height: 1.5;
+}
+
+/* About me */
+
+.circle-img {
+  background-image: url("../../../assets/images/circle-img.jpg");
+  background-size: cover;
+  background-position: center;
+  border-radius: 50%;
+  border: 7px solid #fff;
+  width: 120px;
+  height: 120px;
 }
