--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,14 @@
+
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-html {
-  font-family: "Poppins", sans-serif;
-  overflow-x: hidden;
+body {
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
-
-
 
 .wrapper {
   min-height: 100%;
@@ -18,15 +17,11 @@ html {
 
 /* NAVIGATION BAR */
 
-#mainNav {
-  border-bottom: 1px solid rgba(33, 37, 41, 0.1);
-  background-color: #fff;
-}
 #mainNav .navbar-brand {
   font-weight: 700;
-  text-transform: uppercase;
-  color: orangered;
-  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
+  
+/*  
+  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif; */
 }
 #mainNav .navbar-brand:focus,
 #mainNav .navbar-brand:hover {
@@ -40,42 +35,26 @@ html {
   cursor: pointer;
   color: #0a79e8;
 }
-#mainNav .navbar-nav > li.nav-item:hover,
-#mainNav .navbar-nav > li.nav-item:focus:hover {
-  color: #f05f40;
-}
-#mainNav .navbar-nav > li.nav-item.active,
-#mainNav .navbar-nav > li.nav-item:focus.active {
-  color: #f05f40 !important;
-  background-color: transparent;
-}
-#mainNav .navbar-nav > li.nav-item.active:hover,
-#mainNav .navbar-nav > li.nav-item:focus.active:hover {
-  background-color: transparent;
-}
 
 /* Projects  */
 .projects-section {
   margin-top: 5rem;
 }
-.projects-section h1{
+.projects-section h1 {
   text-align: center;
   margin-bottom: 2rem;
 }
 
-.project-card{
+.project-card {
   position: relative;
   display: block;
   max-width: 650px;
   margin: 0 auto;
- 
-
 }
 
-
-.project-card-caption{
+.project-card-caption {
   background-color: #f05f40;
-  position:absolute;
+  position: absolute;
   bottom: 0;
   display: block;
   width: 100%;
@@ -86,11 +65,9 @@ html {
   /* -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   transition: all 0.2s; */
-
-  
 }
 
-.project-card-caption-content{
+.project-card-caption-content {
   position: absolute;
   top: 30%;
   width: 100%;
@@ -98,25 +75,19 @@ html {
   font-size: 14px;
   font-weight: 600;
   text-transform: uppercase;
- 
-
 }
 
-.project-card:hover .project-card-caption{
+.project-card:hover .project-card-caption {
   opacity: 1;
 }
 .project-card-caption-content {
   line-height: 2rem;
-
-
 }
 .project-card-caption-content a:hover {
-
   color: #f16926dd;
   text-decoration: none;
 }
 .project-card-caption-content i.fab {
-
   font-size: 2rem;
   color: rgb(12, 96, 4);
 }
