--- a/src/components/pages/About/style.css
+++ b/src/components/pages/About/style.css
@@ -1,9 +1,9 @@
 #heroSection {
-  padding-top: 10rem;
+  padding-top: 12rem;
   /* padding-bottom: calc(10rem - 56px); */
   background-image: linear-gradient(
       to bottom,
-      rgba(1, 1, 9, 0.325),
+      rgba(88, 88, 195, 0.965),
       rgba(30, 34, 34, 0.3)
     ),
     url("../../../assets/images/bg-mountains.jpg");
@@ -13,18 +13,27 @@
   -o-background-size: cover; */
   background-size: cover;
   object-fit: cover;
-  min-height: 100vh;
+  height: 100vh;
   min-width: 100vh;
   color: #fff;
+  
 }
 
-#heroSection h1 {
-  font-size: 2rem;
-  margin-bottom: 30px;
+.hero-container{
+  position: relative;
+
+}
+
+#heroSection h3 {
+  font-size: 1.9rem;
+  /* font-weight: 300; */
+  margin-bottom: 10rem;
+ 
 }
 #heroSection p {
+  font-size: 1.1rem;
   font-weight: 300;
-  line-height: 1.5;
+  line-height: 1.7;
 }
 
 /* About me */
@@ -34,7 +43,24 @@
   background-size: cover;
   background-position: center;
   border-radius: 50%;
-  border: 7px solid #fff;
-  width: 120px;
-  height: 120px;
+  border: 5px solid #fff;
+  width: 8rem;
+  height: 8rem;
+  position: absolute;
+  left:50%;
+  top:10%;
+transform: translate(-50%, -10%);
+}
+
+.orangeBtn:link, 
+.orangeBtn:visited {
+  font-size: 1rem;
+  font-weight: 500;
+  background-color: #e67e22;
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  padding: 0.4rem 1rem;
+border-radius: 0.8rem;
+
 }
