--- a/src/index.css
+++ b/src/index.css
@@ -6,26 +6,26 @@
 }
 
 body {
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  /* overflow-x: hidden;
+  overflow-y: hidden; */
 }
-
-/* .wrapper {
-  min-height: 100%;
-  padding-bottom: 100px;
-} */
+h2 {
+  font-size: 1.7rem;
+  font-weight: 500;
+  text-transform: uppercase;
+}
 
 /* NAVIGATION BAR */
 
 #mainNav {
-  padding-top: 1rem;;
+  padding: 1rem 5rem 0;
 }
 
 .logo {
   width: 10rem;
-  padding-left: 1rem;;
-  
+  padding-left: 1rem;
 }
-#mainNav{
+#mainNav {
   font-size: 1.1rem;
   font-weight: 800;
   text-transform: uppercase;
@@ -33,26 +33,16 @@ body {
   color: white;
 }
 
-
-
 /* Projects  */
-.projects-section {
-  margin-top: 5rem;
-}
-.projects-section h1 {
-  text-align: center;
-  margin-bottom: 2rem;
-}
 
 .project-card {
   position: relative;
   display: block;
   /* max-width: 60rem; */
-  margin: 0 auto;
+  margin: 0.8rem;
 }
 
 .project-card-caption {
-  /* background-color: #f05f40; */
   position: absolute;
   bottom: 0;
   display: block;
@@ -61,9 +51,9 @@ body {
   text-align: center;
   opacity: 0;
   background: rgba(246, 245, 243, 0.9);
-  /* -webkit-transition: all 0.2s;
+  -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
-  transition: all 0.2s; */
+  transition: all 0.2s;
 }
 
 .project-card-caption-content {
@@ -83,7 +73,6 @@ body {
   line-height: 2rem;
 }
 .project-card-caption-content a:hover {
-
   text-decoration: none;
 }
 .project-card-caption-content i.fab {
@@ -96,11 +85,37 @@ body {
   color: #f16926dd;
 }
 
-
 /* Skills section */
-.skillsSection {
+.skillsSection,
+.contactSection,
+.projectsSection {
   padding-top: 10rem;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(88, 88, 195, 0.965),
+    rgba(30, 34, 34, 0.3)
+  );
+  height: 100%;
+  width: 100%;
+  /* color:white; */
+  text-align: center;
+  padding-bottom: 8rem;
+}
+.listInlne {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  list-style: none;
+  padding: 1.2rem;
+  font-size: 1.4rem;
 }
 
+/* contact  */
+.contactMeIcons i{
+  padding: 4rem 0;
+  margin: 2rem;
+  text-decoration: none;
+  color:  #e67e22;
+  font-size: 3rem;
 
-
+}
