--- a/src/index.css
+++ b/src/index.css
@@ -5,16 +5,16 @@
   box-sizing: border-box;
 }
 
-body {
-  /* overflow-x: hidden;
-  overflow-y: hidden; */
+body{
+  color: #fff;
 }
-h2 {
+
+.sectionTitle {
+  color:#fff;
   font-size: 1.7rem;
   font-weight: 500;
   text-transform: uppercase;
 }
-
 /* NAVIGATION BAR */
 
 #mainNav {
@@ -97,7 +97,6 @@ h2 {
   );
   height: 100%;
   width: 100%;
-  /* color:white; */
   text-align: center;
   padding-bottom: 8rem;
 }
@@ -110,12 +109,58 @@ h2 {
   font-size: 1.4rem;
 }
 
-/* contact  */
-.contactMeIcons i{
+.socialIcons i{
   padding: 4rem 0;
   margin: 2rem;
   text-decoration: none;
   color:  #e67e22;
   font-size: 3rem;
 
+}
+
+/* Contact Form */
+
+#contact-form {
+  padding: 0.664rem 1rem;
+  font-size: 1.5rem;
+  line-height: 1.125rem;
+  color: #495057;
+  font-weight: 500;
+  width: 50rem;
+  padding: 0.7rem;
+  margin-left: 9rem;
+
+}
+
+
+/* CSS */
+.btn-contact-me {
+  background-color: #e67e22;
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 18px;
+  font-weight: 500;
+  height: 40px;
+  line-height: 20px;
+  list-style: none;
+  margin: 0;
+  outline: none;
+  padding: 10px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: color 100ms;
+  vertical-align: baseline;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-1:hover,
+.button-1:focus {
+  background-color: #f00962;
 }
