--- a/src/components/pages/About/style.css
+++ b/src/components/pages/About/style.css
@@ -29,8 +29,9 @@
 }
 #heroSection p {
   font-size: 1.1rem;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.7;
+  font-family: "Open Sans", sans-serif;
 }
 
 /* About me */
