--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@
 
 body{
   color: #fff;
+  font-family: "Poppins", sans-serif;
+}
+
+p{
+  font-family: "Open Sans", sans-serif;
 }
 
 .sectionTitle {
@@ -14,6 +19,7 @@ body{
   font-size: 1.7rem;
   font-weight: 500;
   text-transform: uppercase;
+  font-weight: 700;
 }
 /* NAVIGATION BAR */
 
@@ -31,6 +37,20 @@ body{
   text-transform: uppercase;
   cursor: pointer;
   color: white;
+}
+
+.contactSection,
+.projectsSection, 
+.skillsSection {
+  padding-top: 10rem;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(88, 88, 195, 0.965),
+    rgba(30, 34, 34, 0.3)
+  );
+  text-align: center;
+  padding-bottom: 8rem;
+  color: #fff;
 }
 
 /* Projects  */
@@ -66,6 +86,9 @@ body{
   text-transform: uppercase;
 }
 
+.project-description-tools{
+  color: black;
+}
 .project-card:hover .project-card-caption {
   opacity: 1;
 }
@@ -85,43 +108,46 @@ body{
   color: #f16926dd;
 }
 
+
 /* Skills section */
-.skillsSection,
-.contactSection,
-.projectsSection {
-  padding-top: 10rem;
-  background-image: linear-gradient(
-    to bottom,
-    rgba(88, 88, 195, 0.965),
-    rgba(30, 34, 34, 0.3)
-  );
-  height: 100%;
-  width: 100%;
-  text-align: center;
-  padding-bottom: 8rem;
+.skillsSection{
+  padding-top: 8rem;
+  
+  padding-bottom: 2rem;
+
+}
+.skillsSection p{
+  line-height: 1.8;
+  font-size: 1.2rem;;
+}
+.skillsSection h3{
+  font-weight: 300;
+  font-size: 1.5rem;
+  color: #D3D3D3
 }
 .listInlne {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content:space-evenly;
   list-style: none;
   padding: 1.2rem;
   font-size: 1.4rem;
+  color: white;
 }
 
-.socialIcons i{
-  padding: 4rem 0;
-  margin: 2rem;
-  text-decoration: none;
-  color:  #e67e22;
-  font-size: 3rem;
-
+.socialIcons img{
+width: 50px;
 }
+
 
 /* Contact Form */
+.contactSection{
+  min-height: 100vh;
+
+}
 
 #contact-form {
-  padding: 0.664rem 1rem;
+  padding: 4rem 1rem;
   font-size: 1.5rem;
   line-height: 1.125rem;
   color: #495057;
@@ -132,8 +158,6 @@ body{
 
 }
 
-
-/* CSS */
 .btn-contact-me {
   background-color: #e67e22;
   border-radius: 8px;
