mobile nav button works when clicked; but need more fixing and change links color

--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,8 @@ p{
   color: white;
 }
 
+/* -----Mobile navigation ----- */
+/* ---------- */
 .contactSection,
 .projectsSection, 
 .skillsSection {
