--- a/src/components/pages/About/style.css
+++ b/src/components/pages/About/style.css
@@ -1,6 +1,5 @@
 #heroSection {
   padding-top: 12rem;
-  /* padding-bottom: calc(10rem - 56px); */
   background-image: linear-gradient(
       to bottom,
       rgba(88, 88, 195, 0.965),
@@ -62,16 +61,20 @@
 
 /* -----Mobile responsive---- */
 /* Below 473px (Tablets)*/
-/* 320px — 480px */
+/* 320px — 480px Mobiles */
 @media (min-width: 20em) and (max-width: 30em) {
+#heroSection {
+  padding-top: 10rem;
+}
 #heroSection h3{
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 }
 #heroSection p {
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: 300;
-  line-height: 1.4;
+  line-height: 1.3;
   padding: 0 0.2rem;
+  margin: 0;
 }
 .circle-img {
   height: 5rem;
@@ -81,5 +84,6 @@
 .orangeBtn:link,
 .orangeBtn:visited {
   font-size: 0.6rem;
+  margin-top: 1rem;
 }
 }
