--- a/src/index.css
+++ b/src/index.css
@@ -60,8 +60,8 @@ p {
 
 
  .logo {
-  width: 10rem;
-  padding-top: 1rem;
+  width: 8rem;
+
 } 
 
 .header {
@@ -69,7 +69,11 @@ p {
   width: 100%;
   top: 0;
   left: 0;
-  background-color: transparent;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(163, 163, 240, 0.965),
+    rgba(30, 34, 34, 0.3)
+  );
   z-index: var(--z-fixed);
  
  }
@@ -77,9 +81,7 @@ p {
  #mainNav {
   display: flex;
   justify-content: space-between;
-  padding-top: 2rem;
   align-items: center;
- 
   margin: 1rem;
  }
 
@@ -97,6 +99,7 @@ p {
   flex-direction: column;
   row-gap: 2.5rem;
   list-style: none;
+  padding-top: 1.5rem;
  }
  
  .nav__link {
@@ -128,7 +131,6 @@ p {
 .project-card {
   position: relative;
   display: block;
-  /* max-width: 60rem; */
   margin: 0.8rem;
 }
 
@@ -203,6 +205,7 @@ p {
 
 .socialIcons img {
   width: 40px;
+  padding-bottom: 4rem;
 }
 
 /* ----------------------Contact Form Page --------------- */
@@ -232,7 +235,7 @@ p {
   list-style: none;
   margin: 0;
   outline: none;
-  padding: 10px 16px;
+  padding: 10px 35px;
   position: relative;
   text-align: center;
   text-decoration: none;
@@ -248,6 +251,31 @@ p {
  transition: right 0.4s;
 }
 
+
+
+.info {
+  width: 100%;
+}
+
+ .info h4 {
+  font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 5px;
+  color: white
+}
+
+.info p {
+  margin-bottom: 0;
+  font-size: 14px;
+  color: #f2f5f7;
+}
+
+.info .email,
+.info .phone {
+  margin-top: 40px;
+}
+
+
 /* -----Media query------ */
 /* Below 1400px */
 @media  only screen and (max-width: 87.5em) {
@@ -255,11 +283,11 @@ p {
     max-width: 120rem;
   }
 
-  #mainNav {
-    margin: 1.2rem 2rem;
+  .logo{
+    margin-left: 6rem;
   }
 }
-/* -------------------responsive navbar------------------ */
+/* -------------------Responsive Navbar------------------ */
 /* below 1150px */
 @media screen and (max-width: 1150px) {
 
@@ -267,14 +295,13 @@ p {
     position: fixed;
     top: 0;
     right: 0;
-    background-color: hsla(0, 0%, 6%, 0.2);
     backdrop-filter: blur(16px);
     -webkit-backdrop-filter: blur(16px);
     min-width: 30vw;
     min-height: 3vh;
-    padding: 6rem 3rem 0;
     transition: right 0.4s;
   }
+ 
  }
 
   @media screen and (min-width: 1150px) {
@@ -291,6 +318,7 @@ p {
     column-gap: 2.5rem;
   }
 } 
+
 /* ---------------------------------------------------------- */
 /* Below 1200px */
 @media  only screen and (max-width: 75em) {
@@ -304,10 +332,6 @@ p {
 }
 /* Below 990px (Tablets)*/
 @media only screen and (max-width: 62em) {
-
-  /* .navbar-brand {
-    padding-left: 0;
-  } */
   .listInline {
     font-size: 1.2rem;
   }
@@ -316,22 +340,57 @@ p {
     font-size: 0.8rem;
     padding: 0 0.4rem;
   }
+
+  .skillsSection h3{
+    font-size: 1.1rem;
+    margin: 0 auto;
+  }
   .socialIcons img{
     width: 15%;
   }
- 
+  
+  .info h4{
+    font-size: 1rem;
+  }
+  .map {
+    width: 100%;
+    height: 35vh;
+    margin-top: 20px;
+  }
+}
 
+@media only screen and (max-width: 36em) {
+    #mainNav {
+    margin-left: 0;  
+  }
+  .logo{
+    margin-left: 2rem;
+  }
 
- 
 }
 /* Below 473px (Tablets)*/
 /* 320px — 480px */
 @media (min-width: 20em) and (max-width: 30em) {
-  .logo{
-    margin: 0 auto;
-    text-align: center;
-    width: 100%;
+  .hero-container{
+    margin-bottom: 3rem;
   }
+  .logo{
+    padding-left: 5px;
+    width: 7rem;
+  }
+
+  .nav__list {
+    row-gap: 1rem;
+    list-style: none;
+    padding-top: 4rem;
+   }
+
+   .nav__close {
+    top: 0.2rem;
+    right: 0.2rem;
+    font-size: 1.8rem;
+   }
+   
   .sectionTitle {
     font-size: 1.2rem;
     margin-bottom: 0;
@@ -358,6 +417,9 @@ p {
   .socialIcons img{
     width: 15%;
   }
- 
+  .btn-contact-me {
+    font-size: 13px;
+    padding: 5px 20px;
+  }
 
 }
